--- a/css/newlifestyle.sass
+++ b/css/newlifestyle.sass
@@ -396,6 +396,17 @@ nav ul li a:hover::after
   margin-bottom: 0
   color: black
 
+
+#floor-tag
+  position: absolute
+  margin: auto
+  background-color: $darkblue
+  color: $gray
+  border-radius: 10px
+  padding: 10px
+  left: 40%
+  margin-top: 70px
+
 .contact-info
   padding: 0 50px
   border: 2px solid $darkgreen
