--- a/css/newlifestyle.sass
+++ b/css/newlifestyle.sass
@@ -414,6 +414,7 @@ nav ul li a:hover::after
   display: flex
   flex-direction: row
   flex-wrap: wrap
+  line-height: 2
   justify-content: space-around
   a
     background-color: $darkgreen
